Fixed ClassCastException
Signed-off-by: Owais Kazi <owaiskazi19@gmail.com>